--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -12,8 +12,8 @@
         <a href="#"><i class="fa fa-graduation-cap"></i> Lessons<span class="arrow"></span></a>
       </li>
       <ul class="sub-menu collapse" id="service">
-        <li ui-sref='.level1'> Level 1</li>
-        <li ui-sref='.level2'> Level 2</li>
+        <li ui-sref='.level1.lesson1'> Level 1</li>
+        <li ui-sref='.level2.lesson2'> Level 2</li>
       </ul>
 
       <li ui-sref='.calculator'>
