--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -1,3 +1,123 @@
 <div class="container">
-    <h2>Lesson 1 and stuff</h1>
+<div class="col-lg-12 lesson1" >
+    <h1>Lesson 1</h1>
+    <p class="lead">
+        by <a href="#"> <i class="fa fa-rocket"></i> grockr</a>
+    </p>
+    <hr>
+    <img style='width:100%;height: 20em;'class="img-responsive" src="http://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2014/11/12/102179139-stock-market-board.1910x1000.jpg" alt="">
+    <hr>
+    <h2 class="lead" style='font-size:3em; text-align: center;'>What is the stock market?</h2>
+    <h4>Well, what is a market?</h4>
+    <p>You can think of a market just like market where you buy your groceries.  A market is just a place where things are bought and sold.</p>
+    <hr>
+    <h4>What is a stock?</h4>
+    <p>Think of a company as a pile of bricks. Like a castle! A stock is one brick.  It is a little piece of a company.  If you own a stock of a company, you are considered to be a <em>shareholder</em>. Shareholders are the group of people who own the company!</p>
+    <p>So...you can probably guess what a <em>stock...   market...</em> is then.</p>
+    <p>The stock market is a place where you can go to buy stocks, or pieces of companies.<p>
+    <hr>
+    <h4>Why do people buy stocks?</h4>
+    <p>That's easy! To make money!</p>
+    <p>Let's say you buy one stock, or one share... <em> or piece </em> of a company, for $5.
+      If that company makes money, their <em>market value</em>, which is the value of their stock in the market, goes up.
+      But... you own one share of that company, which means if they make money, you make money!  If their market value goes up,
+      and the price of their stock goes up to $10, you just made $5!
+    <hr>
+    <img style='width:100%;height: 20em;'class="img-responsive" src="http://www.ciginvest.com/wp-content/uploads/2011/12/wall-street-sign-homepage.jpg" alt="">
+    <hr>
+    <h4>How do you buy stocks?</h4>
+    <p>Before the internet and computers, the stock market was actually a place you would go to buy and sell stocks.
+      The most famous stock market in the world is the New York Stock Exchange, on Wall Street in New York City. The term <em>exchange</em>
+      is another name for a specific stock market.  Today there are many exchanges all over the world, but here are a few in the United States:
+      <ul>
+        <li>NYSE: <em> The New York Stock Exchange</em></li>
+        <li>NASDAQ: <em> National Association of Securities Dealers Automated Quotations </em></li>
+        <li>CSE: <em> Chicago Stock Exchange</em></li>
+      </ul>
+    </p>
+    <p>The stock market today is made up of many exchanges.  Most of them are now similar to online stores. However,
+      in order to actually buy a stock, you must have someone called a <em>broker</em> do it for you. Whenever you a buy a stock,
+      you place an <em>order</em> with you broker, who fills out the rest of the paperwork for you and makes sure your money is safe.</p>
+
+    <p>Note: Brokers charge you for each order you place.  For example, a broker may charge $6 each time you buy and each time you sell. So... you need to make sure
+      that you have at least made $6 when you sell your stock, if you want to make money!</p>
+
+    <p>Brokers work at different <em>brokerages</em>, or the businesses that place orders for you. These brokerages are all online now and you can log in to their websites, and buy stocks just like you can
+      buy things on Amazon or Ebay.</p>
+    <p> Pretty cool right!?</p>
+
+    <p> Here is a list of the most popular brokerages:
+      <ul>
+        <li>
+          <img height='50' width='50' src='http://careers.tdameritrade.com/img/social-profile.png'>
+          TD Ameritrade
+        </li>
+        <li>
+          <img height='50' width='50'  src='http://judestewart.com/wp-content/uploads/2013/07/ETRADE-logo.gif'>
+          E-Trade
+        </li>
+        <li>
+          <img height='50' width='50'  src='https://upload.wikimedia.org/wikipedia/commons/a/a4/Charles_Schwab_Corporation_logo.png'>
+          Charles Schwab
+        </li>
+        <li>
+          <img height='50' width='50'  src='https://uberglobal.files.wordpress.com/2013/10/fidelity-investments-usa-fed-rsv-note-iou-illuminati1-pyramid-nuovos-oros-seclorum-nwo.png'>
+          Fidelity
+        </li>
+        <li>
+          <img height='50' width='50'  src='https://lh3.ggpht.com/lrMLVOEwdiRJYkxOt7rAhfcQ1o76tsx1Vrj9CkQ52xyffgbyS6YEoYHffRnvuzPAgA=w300'>
+          Merrill Edge
+        </li>
+        <li>
+          <img height='50' width='50'  src='https://pbs.twimg.com/profile_images/458653187243646976/AuV78rgC_400x400.png'>
+          Scottrade
+        </li>
+        <li>
+          <img height='50' width='50'  src='http://a1578.phobos.apple.com/us/r1000/107/Purple/v4/e7/7b/52/e77b5224-305f-c75b-e250-38974698b46e/mzl.wjnswvfb.175x175-75.jpg'>
+          TradeStation
+        </li>
+      </ul>
+    </p>
+    <hr>
+    <h4>How to pick a stock to buy:</h4>
+    <ol>
+      <li>Find a company you know about or that interests you.</li>
+      <li>Look at the current price of the stock, and compare it to the prices in the past. People who buy and sell stocks are called traders.
+        Traders often use charts to look at the price of a stock over time. If it looks like the line goes up over time, it is called an <em>upward trend</em>... or... the <em>trendline</em> is positive.
+        If the line goes down over time, the company is doing poorly, and the chart has a downward trend. You want to buy shares of stock of the companies with an upward trend.
+      </li>
+      <li>Check the news: If you search for a company in the news and the articles are positive and say good things, it is a good sign that you can buy that stock and the price will go up.
+      If the news is bad, and the articles say bad things, chances are the price will go down, and you should not buy that stock.</li>
+      <li>Ask yourself, how does this company make money? Do they sell computers, tractors, fruit, gasoline? When you know how a company makes their money,
+        you can make a better prediction about whether their price will go up or down. For example, if you want to buy some shares of a toy company,
+        their stock might be cheaper in the summer or fall, before the Christmas season.  So, buy in the fall, sell after Christmas.  </li>
+    </ol>
+
+    <hr>
+    <h4>Conclusion</h4>
+    <p>grockr lets you buy and sell stocks that we have picked for you. All you have to do, is make decisions and do you research. In the stock
+      tab of each level, you will find the list of companies you can trade.  Each company will have:
+      <p>...a summary of who they are</p>
+      <p>...the current price of their stock</p>
+      <p>...a smiley face or a frowny face to tell you whether the news is good or bad</p>
+      <p>...and Buy or Sell buttons. Click Buy to place a buy order, and click Sell to go to your dashboard where you can sell your stocks.</p>
+    </p>
+
+
+
+
+    <hr>
+
+
+    <div class="well">
+        <h4>Leave a Comment:</h4>
+        <form role="form">
+            <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <hr>
+</div>
 </div>
