--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -1,26 +1,27 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
+            <div class="box" style='height:25em;'>
                 <div class="box-icon">
                     <span class="fa fa-4x fa fa-apple"></span>
                 </div>
                 <div class="info">
                     <h4 class="text-center">Apple</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
+                    <p>Apple was created in 1971 by Steve Jobs and Steve Wozniak, and their headquarters are in Cupertino, California. They make and sell both computer hardware and software.
+                      Apple's products include the Mac, Ipod, Ipad, AppleTv, Apple Watch, OSX operating system, and many more.</p>
+                    <a href="https://en.wikipedia.org/wiki/Apple_Inc." class="btn">Wiki</a>
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
+            <div class="box" style='height:25em;'>
                 <div class="box-icon">
                   <span class="fa fa-4x fa fa-windows"></span>
                 </div>
                 <div class="info">
                     <h4 class="text-center">Microsoft</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
+                    <p>Microsoft was created in 1975 by Bill Gates and Paul Allen, and their headquarters are in Redmond, Washington. Microsoft makes tablets (Surface), game-consoles (Xbox), and smartphones (Lumia). Still software -- for individuals and businesses -- is Microsoft's biggest source of income.</p>
+                    <a href="https://en.wikipedia.org/wiki/Microsoft" class="btn">Wiki</a>
                 </div>
             </div>
         </div>
@@ -41,12 +42,12 @@
     <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <span class='{{face}}'></span>
+          <span class='fa fa-smile-o fa-3x'></span>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <span class='{{face}}'></span>
+          <span class='fa fa-smile-o fa-3x'></span>
         </div>
       </div>
     </div>
