--- a/public/partials/stock2.html
+++ b/public/partials/stock2.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin: 0 auto; text-align: center;">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box" >
@@ -20,13 +20,13 @@
         </div>
       </div>
     </div>
-    <!-- <div class='row' ng-controller='sentimentController'>
+    <div class='row'>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="box" style="text-align: center;">
-          <span class='{{face}}'></span>
+          <span class='fa fa-smile-o fa-3x'></span>
         </div>
       </div>
-    </div> -->
+    </div>
         <div class='row'>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box" style="text-align: center;">
