--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,5 +1,5 @@
 <div layout="column" ng-cloak>
-  <div class='box' style='text-align: center; background-color:#607D8B;'>
+  <div class='box' style='text-align: center;'>
   <h1 style='font-family: Nunito;'>Sign Up!</h1>
   <br>
     <form class='ioForm' ng-submit='createAccount(credentials)'>
@@ -7,7 +7,7 @@
       <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
       <label>Password</label>
       <input ng-model='credentials.password'  style='text-align: center;' type='password'></input>
-      <input type='submit' value='submit'></input>
+      <input ui-sref='dash.intro' type='submit' value='submit'></input>
     </form>
   </div>
 </div>
