--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -1,13 +1,13 @@
 <div class="container">
-<div class="col-lg-12 lesson1" >
+<div class="col-lg-12 lesson1 box" >
     <h1>Lesson 1</h1>
     <p class="lead">
-        by <a href="#"> <i class="fa fa-rocket"></i> grockr</a>
+        by <span style='color: red;'><i class="fa fa-rocket"></i> grockr</span>
     </p>
     <hr>
     <img style='width:100%;height: 20em;'class="img-responsive" src="http://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2014/11/12/102179139-stock-market-board.1910x1000.jpg" alt="">
     <hr>
-    <h2 class="lead" style='font-size:3em; text-align: center;'>What is the stock market?</h2>
+    <h2 class="lead" style='font-family: Nunito; font-size:3em; text-align: center;'>What is the stock market?</h2>
     <h4>Well, what is a market?</h4>
     <p>You can think of a market just like market where you buy your groceries.  A market is just a place where things are bought and sold.</p>
     <hr>
@@ -46,40 +46,41 @@
       buy things on Amazon or Ebay.</p>
     <p> Pretty cool right!?</p>
 
-    <p> Here is a list of the most popular brokerages:
-      <ul>
-        <li>
-          <img height='50' width='50' src='http://careers.tdameritrade.com/img/social-profile.png'>
-          TD Ameritrade
-        </li>
-        <li>
-          <img height='50' width='50'  src='http://judestewart.com/wp-content/uploads/2013/07/ETRADE-logo.gif'>
-          E-Trade
-        </li>
-        <li>
-          <img height='50' width='50'  src='https://upload.wikimedia.org/wikipedia/commons/a/a4/Charles_Schwab_Corporation_logo.png'>
-          Charles Schwab
-        </li>
-        <li>
-          <img height='50' width='50'  src='https://uberglobal.files.wordpress.com/2013/10/fidelity-investments-usa-fed-rsv-note-iou-illuminati1-pyramid-nuovos-oros-seclorum-nwo.png'>
-          Fidelity
-        </li>
-        <li>
-          <img height='50' width='50'  src='https://lh3.ggpht.com/lrMLVOEwdiRJYkxOt7rAhfcQ1o76tsx1Vrj9CkQ52xyffgbyS6YEoYHffRnvuzPAgA=w300'>
-          Merrill Edge
-        </li>
-        <li>
-          <img height='50' width='50'  src='https://pbs.twimg.com/profile_images/458653187243646976/AuV78rgC_400x400.png'>
-          Scottrade
-        </li>
-        <li>
-          <img height='50' width='50'  src='http://a1578.phobos.apple.com/us/r1000/107/Purple/v4/e7/7b/52/e77b5224-305f-c75b-e250-38974698b46e/mzl.wjnswvfb.175x175-75.jpg'>
-          TradeStation
-        </li>
-      </ul>
-    </p>
+    <p> Here is a list of the most popular brokerages:</p>
+
+    <div class='row' style='text-align: center;'>
+      <div class='col-md-4'>
+        <img height='60' width='60' src='http://careers.tdameritrade.com/img/social-profile.png'>
+        <p>TD Ameritrade</p>
+      </div>
+      <div class='col-md-4'>
+        <img height='60' width='60'  src='http://judestewart.com/wp-content/uploads/2013/07/ETRADE-logo.gif'>
+        <p>E-Trade</p>
+      </div>
+      <div class='col-md-4'>
+        <img height='60' width='60'  src='https://upload.wikimedia.org/wikipedia/commons/a/a4/Charles_Schwab_Corporation_logo.png'>
+        <p>Charles Schwab</p>
+      </div>
+    </div>
+    <div class='row' style='text-align: center;'>
+      <div class='col-md-4'>
+        <img height='60' width='60'  src='https://pbs.twimg.com/profile_images/458653187243646976/AuV78rgC_400x400.png'>
+        <p>Scottrade</p>
+      </div>
+      <div class='col-md-4'>
+        <img height='60' width='60'  src='https://uberglobal.files.wordpress.com/2013/10/fidelity-investments-usa-fed-rsv-note-iou-illuminati1-pyramid-nuovos-oros-seclorum-nwo.png'>
+        <p>Fidelity</p>
+      </div>
+      <div class='col-md-4'>
+        <img height='60' width='60'  src='https://lh3.ggpht.com/lrMLVOEwdiRJYkxOt7rAhfcQ1o76tsx1Vrj9CkQ52xyffgbyS6YEoYHffRnvuzPAgA=w300'>
+          <p>Merrill Edge</p>
+      </div>
+    </div>
+
+
+
     <hr>
-    <h4>How to pick a stock to buy:</h4>
+    <h4>How to pick a stock:</h4>
     <ol>
       <li>Find a company you know about or that interests you.</li>
       <li>Look at the current price of the stock, and compare it to the prices in the past. People who buy and sell stocks are called traders.
@@ -95,15 +96,16 @@
 
     <hr>
     <h4>Conclusion</h4>
-    <p>grockr lets you buy and sell stocks that we have picked for you. All you have to do, is make decisions and do you research. In the stock
+    <p>grockr lets you buy and sell stocks that we have picked for you. All you have to do, is decide when to buy and how much. In the stock
       tab of each level, you will find the list of companies you can trade.  Each company will have:
       <p>...a summary of who they are</p>
       <p>...the current price of their stock</p>
       <p>...a smiley face or a frowny face to tell you whether the news is good or bad</p>
       <p>...and Buy or Sell buttons. Click Buy to place a buy order, and click Sell to go to your dashboard where you can sell your stocks.</p>
     </p>
+    <p>In the chart tab you will find the charts for each stock. They are interactive and allow you to see the history of the prices over time. This is extremely useful!
 
-
+    <h5>Have fun!</h5>
 
 
     <hr>
