--- a/public/partials/portal.html
+++ b/public/partials/portal.html
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='container box text-left'>
   <div class='row' id='portalRow' style='text-align:center;'>
         <button ui-sref='.login' type="button"  class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-ok"></span> Log In</button>
         <button ui-sref='.register' type="button"  class="btn btn-success btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span>  Sign Up</button>
@@ -20,5 +20,5 @@
       </div>
     </div>
   </div>
-</div>
 <div ui-view></div>
+</div>
