--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -7,7 +7,7 @@
       <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
       <label>Password</label>
       <input ng-model='credentials.password'  style='text-align: center;' type='password'></input>
-      <input ui-sref='dash.intro' type='submit' value='submit'></input>
+      <input type='submit' value='submit'></input>
     </form>
   </div>
 </div>
