--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -46,6 +46,7 @@
       buy things on Amazon or Ebay.</p>
     <p> Pretty cool right!?</p>
 
+    <hr>
     <p> Here is a list of the most popular brokerages:</p>
 
     <div class='row' style='text-align: center;'>
@@ -80,7 +81,7 @@
 
 
     <hr>
-    <h4>How to pick a stock:</h4>
+    <h4>How to pick a stock</h4>
     <ol>
       <li>Find a company you know about or that interests you.</li>
       <li>Look at the current price of the stock, and compare it to the prices in the past. People who buy and sell stocks are called traders.
