--- a/public/partials/level1.html
+++ b/public/partials/level1.html
@@ -1,4 +1,4 @@
-<h2 style="text-align:center;">Level 1</h2>
+<h2 style="text-align:center; font-family: Nunito;">Level 1</h2>
 <div class='container'>
   <div class='row' style="text-align:center;">
     <button type="button" ui-sref='.lesson1' class="btn3d btn btn-white btn-lg"><span class="fa fa-graduation-cap"></span> Lesson </button>
