--- a/public/partials/intro.html
+++ b/public/partials/intro.html
@@ -1,3 +1,29 @@
-<div class='container'>
-  <h1>About</h1>
-</div>
+<div style='height: 60em;'>
+  <div class='splash col-sm-12 col-xs-12' style='padding-bottom: 2em; float: left; text-align: center; height:100%; margin:0; padding:0;'>
+
+    <div class='left pull-left col-sm-6 col-xs-6 ' style=" height: 55em;margin:0; padding:0;" >
+      <div class='top col-sm-12 col-xs-12' style='background-color: #FFFF00; height:25em;margin:0; padding:0;'><h1 style='font-family: Nunito; padding-top: 1.5em;'>Welcome</h1></span></div>
+      <div class='bottom col-sm-12 col-xs-12' style='margin:0; padding:0; height: 35em;'>
+        <div class='left pull-left col-sm-6 col-xs-6' style='background-color: purple; height:35em;margin:0; padding:0;'></div>
+        <div class='right pull-right col-sm-6 col-xs-6' style='background-color: #2196F3;  height:35em;margin:0; padding:0;'>
+          <div class='top col-sm-12 col-xs-12' style='height: 17.5em; margin:0; padding:0; background-image: url(http://www.thestreet.com/files/tsc/v2008/defaultImages/investing-a-z-stock-market-game-for-students.jpg)'></div>
+          <div class='bottom col-sm-12 col-xs-12' style='background-color: #2979FF; height: 17.5em; margin:0; padding:0;'><span style='padding: 1.8em;' class='fa fa-apple fa-4x'></span></div>
+        </div>
+      </div>
+    </div>
+
+    <div class='right pull-right col-sm-6 col-xs-6'  style=' height:60em; margin:0; padding: 0;'>
+      <div class='top col-sm-12 col-xs-12' style='background-image: url(http://static.communitytable.parade.com/wp-content/uploads/2013/04/marilyn-stock-market-ftr.jpg); background-size: contain; width: 100%; height: 15em;margin:0; padding:0; '></div>
+      <div class='bottom col-sm-12 col-xs-12' style=" height:45em;background-color: purple; margin:0; padding:0;">
+        <div class='left pull-left col-sm-6 col-xs-6' style='background-color: #FF3D00; height: 45em; margin:0; padding:0;'></div>
+        <div class='right pull-right col-sm-6 col-xs-6' style='background-color: orange; height: 45em; margin:0; padding:0;'>
+          <div class='top col-sm-12 col-xs-12' style='height: 22.5em;margin:0; padding:0; background-image: url(http://news.kaitlinyoung.com/images/how-to-purchase-stock-89.jpg)'></div>
+          <div class='bottom col-sm-12 col-xs-12' style='background-color: #76FF03; height: 11.25em;margin:0; padding:0;'><span style='padding: .9em;'class='fa fa-windows fa-4x'></span></div>
+          <div class='bottom col-sm-12 col-xs-12' style='background-color: purple; height: 22.5em; margin:0; padding:0;'>
+            <div class='top col-sm-12 col-xs-12' style='background-image: url(http://static.greatbigcanvas.com/categories/wall-street-609.jpg); background-size: contain; height: 11.25em;  margin:0; padding:0;'></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
