--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -461,4 +461,15 @@ body {
   h1 {
     font-family: Nunito;
   }
+
+  .splash{
+    margin: 0;
+    padding: 0;
+    margin-top: 4em;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.16), 0 15px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+
+  body {
+    height: 100%;
+  }
 /*# sourceMappingURL=style.css.map */
