--- a/public/partials/intro.html
+++ b/public/partials/intro.html
@@ -9,7 +9,7 @@
           <div class='bottom' style='background-image: url(https://blogs.perficient.com/lifesciences/files/2015/04/pharma-life-sciences-stocks.jpg); height: 30em;'></div>
         </div>
         <div class='right pull-right col-sm-6 col-xs-6' style='background-color: #2196F3;  height:35em;margin:0; padding:0;'>
-          <div class='top col-sm-12 col-xs-12' style='height: 17.5em; margin:0; padding:0; background-image: url(http://www.thestreet.com/files/tsc/v2008/defaultImages/investing-a-z-stock-market-game-for-students.jpg); background-size: cover;'></div>
+          <div class='top col-sm-12 col-xs-12' style='height: 17.5em; margin:0; padding:0; background-image: url(http://images.ny-pictures.com/photo2/m/39959_m.jpg); background-size: contain;'></div>
           <div class='bottom col-sm-12 col-xs-12' style='background-color: #2979FF; height: 17.5em; margin:0; padding:0;'><span style='padding: 1.7em;' class='fa fa-apple fa-4x'></span></div>
         </div>
       </div>
@@ -19,17 +19,15 @@
       <div class='top col-sm-12 col-xs-12' style='background-image: url(http://static.communitytable.parade.com/wp-content/uploads/2013/04/marilyn-stock-market-ftr.jpg); background-size: contain; width: 100%; height: 15em;margin:0; padding:0; '></div>
       <div class='bottom col-sm-12 col-xs-12' style=" height:45em;background-color: purple; margin:0; padding:0;">
         <div class='left pull-left col-sm-6 col-xs-6' style='background-color: #FF3D00; height: 45em; margin:0; padding:0;'>
-          <div class='top col-sm-12 col-xs-12'  style="height:35em; text-align:center; padding: 3em; font-size: 2em;"><h3 style='text-align:center; font-family: Nunito; padding-top: 3em;'>Let us introduce you to the stock market.</h3></div>
-          <div class='bottom col-sm-12 col-xs-12' style='background-image: url(http://static.greatbigcanvas.com/categories/wall-street-609.jpg); background-size: cover; height: 10em;  margin:0; padding:0;'></div>
+          <div class='top col-sm-12 col-xs-12'  style="height: 35em; text-align:center; font-size: 2em; padding: 3em;"><h3 style='text-align:center; font-family: Nunito; padding-top: 2.1em;'>Let us introduce you to the stock market.</h3></div>
+          <!-- <div class='bottom col-sm-12 col-xs-12' style='background-image: url(http://static.greatbigcanvas.com/categories/wall-street-609.jpg); background-size: cover; height: 10em;  margin:0; padding:0;'></div> -->
         </div>
         <div class='right pull-right col-sm-6 col-xs-6' style='background-color: orange; height: 45em; margin:0; padding:0;'>
             <div class='bottom col-sm-12 col-xs-12' style='background-color: #76FF03; height: 11.5em;margin:0; padding:0;'><span style='padding: 1em;'class='fa fa-windows fa-4x'></span></div>
             <div class='top col-sm-12 col-xs-12' style='height: 20em;margin:0; padding:0; background-image: url(http://news.kaitlinyoung.com/images/how-to-purchase-stock-89.jpg); background-size: cover;'></div>
             <div class='bottom col-sm-12 col-xs-12' style='background-color: #FFC107; height: 13.5em;margin:0; padding:0;'><span style='padding: 1.2em;'class='fa fa-google fa-4x'></span></div>
-
-          </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
+</div>
