fixed sell order

--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -1,11 +1,11 @@
 <div class="nav-side-menu">
-  <div class="brand"><h3 id='dashBrand' ui-sref='home'>{{nameSpace}}</h3></div>
+  <div class="brand"><h3 id='dashBrand' ui-sref='.intro'>{{nameSpace}}</h3></div>
   <i class="glyphicon glyphicon-menu-hamburger toggle-btn-inverse" data-toggle="collapse" data-target="#menu-content"></i>
   <div class="menu-list">
     <ul id="menu-content" class="menu-content collapse out">
       <li>
         <a ui-sref=".intro">
-          <i class="fa fa-line-chart"></i> About
+          <i class="fa fa-line-chart"></i> Home
         </a>
       </li>
       <li data-toggle="collapse" data-target="#service" class="collapsed">
