--- a/public/partials/intro.html
+++ b/public/partials/intro.html
@@ -1,4 +1,4 @@
-<div style='height: 60em;'>
+<div style='height: 60em; padding: 0; margin: 0;'>
   <div class='splash col-sm-12 col-xs-12' style='padding-bottom: 2em; float: left; text-align: center; height:100%; margin:0; padding:0;'>
 
     <div class='left pull-left col-sm-6 col-xs-6 ' style=" height: 55em;margin:0; padding:0;" >
@@ -19,8 +19,8 @@
       <div class='top col-sm-12 col-xs-12' style='background-image: url(http://static.communitytable.parade.com/wp-content/uploads/2013/04/marilyn-stock-market-ftr.jpg); background-size: contain; width: 100%; height: 15em;margin:0; padding:0; '></div>
       <div class='bottom col-sm-12 col-xs-12' style=" height:45em;background-color: purple; margin:0; padding:0;">
         <div class='left pull-left col-sm-6 col-xs-6' style='background-color: #FF3D00; height: 45em; margin:0; padding:0;'>
-          <div class='top col-sm-12 col-xs-12'  style="height: 35em; text-align:center; font-size: 2em; padding: 3em;"><h3 style='text-align:center; font-family: Nunito; padding-top: 2.1em;'>Let us introduce you to the stock market.</h3></div>
-          <!-- <div class='bottom col-sm-12 col-xs-12' style='background-image: url(http://static.greatbigcanvas.com/categories/wall-street-609.jpg); background-size: cover; height: 10em;  margin:0; padding:0;'></div> -->
+          <div class='top col-sm-12 col-xs-12'  style=" text-align:center;font-size: 2em; padding: 3em; padding-top: 2.3em;"><h3 style='text-align:center; font-family: Nunito; padding-top: 1.5em; padding-bottom: 1.4em;'>Let us introduce you to the stock market.</h3></div>
+          <div class='bottom col-sm-12 col-xs-12' style='background-image: url(http://static.greatbigcanvas.com/categories/wall-street-609.jpg); background-size: cover; height: 10em;  margin:0; padding:0;'></div>
         </div>
         <div class='right pull-right col-sm-6 col-xs-6' style='background-color: orange; height: 45em; margin:0; padding:0;'>
             <div class='bottom col-sm-12 col-xs-12' style='background-color: #76FF03; height: 11.5em;margin:0; padding:0;'><span style='padding: 1em;'class='fa fa-windows fa-4x'></span></div>
