--- a/public/partials/dash.html
+++ b/public/partials/dash.html
@@ -21,7 +21,7 @@
       </li>
 
       <li ui-sref='.library'>
-         <a href="#"><i class="fa fa-folder-o"></i> Library</a>
+         <a href="#"><i class="fa fa-folder-o"></i> Glossary</a>
       </li>
 
 
