--- a/public/partials/lesson2.html
+++ b/public/partials/lesson2.html
@@ -1,4 +1,40 @@
-<div class='container'>
-<h2>Lesson 2</h2>
-<h2>Google</h2>
+<div class="container">
+<div class="col-lg-12 lesson1 box" >
+    <h1>Lesson 2</h1>
+    <p class="lead">
+        by <span style='color: red;'><i class="fa fa-rocket"></i> grockr</span>
+    </p>
+    <hr>
+    <img style='width:100%;height: 20em;'class="img-responsive" src="http://cdn1.tnwcdn.com/wp-content/blogs.dir/1/files/2014/07/money.jpg" alt="">
+    <hr>
+    <h2 class="lead" style='font-family: Nunito; font-size:3em; text-align: center;'>How do companies make money?</h2>
+    <h4>Products, Services, and Information</h4>
+    <p>Many publicly traded companies make money in different ways. When you buy a comapany's stock, you should know what type of industry they are in and how they make money.</p>
+    <hr>
+    <h4>Products</h4>
+    <p>Many businesses make money from selling products.  Microsoft, for example, makes money selling software products and hardware products like the Xbox and Galaxy tablets. These products are listed for sale and people in exchange pay money for them. That money goes back to the company where it is used to pay its employees, advertise, and pay its bills.</p>
+    <p></p>
+    <p>The more products a company sells, the more popular it becomes. When a company has a popular product, it makes more money.  So, if a company is selling a product that is popular, it may be safer to buy their stock because the price will go up.<p>
+    <hr>
+    <h4>Services</h4>
+    <p>Services are simple! In exchange for doing something, someone pays you money.  That's it! If a company makes their money by providing services, they are actually <em>doing</em> something for you, and you pay them in return. Think about a mechanic. You pay a mechanic to fix your car. They only make money by <em>fixing your car.</em> </p>
+    <p>Companies like law firms, consulting companies, advertising, and marketing firms make money by selling their service to you. They make advertisements, represent you in court, or advise you on business matters in exchange for payment. If they are good at it, their company is worth more money. If they are worth a lot, and perform well, then they may be good stocks to buy.</p>
+    <hr>
+    <h4>Information</h4>
+    <p>Information is a little bit trickier.  Sometimes companies make money by selling information about their customers, or the people that use their products.</p>
+    <p>Google is a good example of both services and information. Google, as you probably know, has a popular website. They have millions of users who enjoy their services like searching, maps, and email. <em>Because</em> these services are so popular, they can sell information about the people who use their website to other companies. Some companies buy information about the <em>traffic</em> on a website so that they can sell more of their own products. These days, selling information makes you a lot of money. Google is a very successful company and their stock has done very well. </p>
+    <hr>
+      <a style='font-size: 1.5em;' href='http://rcs.seerinteractive.com/money/'>Find out how some of biggest technology companies make <em>their</em> money.</a>
+    <hr>
+    <div class="well">
+        <h4>Leave a Comment:</h4>
+        <form role="form">
+            <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <hr>
+</div>
 </div>
