--- a/public/partials/chart.html
+++ b/public/partials/chart.html
@@ -1,7 +1,7 @@
 <script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 
-<div class='lessonContainer'>
+<div class='lessonContainer animated flipInX'>
   <div class='row'>
     <div id="CHARTcontainer" style="height: 400px; max-width: 100%;min-width: 310px"></div>
   </div>
