--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -6,6 +6,6 @@
     <input ng-model='credentials.userName' style='text-align: center;' type='text'></input>
     <label>Password</label>
     <input ng-model='credentials.password' style='text-align: center;' type='password'></input>
-    <input  type='submit' value='submit'></input>
+    <input  type='submit' value='Go'></input>
   </form>
 </div>
