--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="col-lg-12 lesson1 box" >
+<div class="animated col-lg-12 lesson1 box fadeIn" >
     <h1>Lesson 1</h1>
     <p class="lead">
         by <span style='color: red;'><i class="fa fa-rocket"></i> grockr</span>
