--- a/public/partials/lesson2.html
+++ b/public/partials/lesson2.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated fadeIn">
 <div class="col-lg-12 lesson1 box" >
     <h1>Lesson 2</h1>
     <p class="lead">
