--- a/public/partials/stock1.html
+++ b/public/partials/stock1.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated flipInX" style='margin-top: 2em; margin-bottom: 4em;'>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box" style='height:25em;'>
