--- a/public/partials/stock2.html
+++ b/public/partials/stock2.html
@@ -1,34 +1,34 @@
-<div class="container" style="margin: 0 auto; text-align: center;">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+<div class="container animated flipInX" style="margin-top: 2em;margin-bottom: 4em; text-align: center;">
+    <div class="row" style="text-align: center;">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 center-block" style='float:none;'>
             <div class="box" >
                 <div class="box-icon">
                     <span class="fa fa-4x fa fa-google"></span>
                 </div>
                 <div class="info">
                     <h4 class="text-center">Google</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
-                    <a href="" class="btn">Link</a>
+                    <p>Google was founded in 1998 by Larry Page and Sergey Brin and their headquarters are in Mountain View, California. Google is the world's leading search engine and e-mail provider (G-Mail), and they sell a variety of services and information.</p>
+                    <a href="https://en.wikipedia.org/wiki/Google" class="btn">Wiki</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class='row'>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class='row' style="text-align: center;">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 center-block" style='float:none;'>
         <div class="box" style="text-align: center;">
           <h3>{{goog | currency}}</h3>
         </div>
       </div>
     </div>
-    <div class='row'>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class='row' style="text-align: center;">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 center-block" style='float:none;'>
         <div class="box" style="text-align: center;">
           <span class='fa fa-smile-o fa-3x'></span>
         </div>
       </div>
     </div>
-        <div class='row'>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class='row' style="text-align: center;">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 center-block" style='float:none;'>
             <div class="box" style="text-align: center;">
               <button type="button" data-toggle="modal" data-target="#googModal" class="btn btn-success btn-lg btn3d"><span class="fa fa-chevron-up"></span> BUY</button>
               <button type="button" ui-sref='dash.orders' class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button>
