--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
-@import url("http://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
+@import url("https://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
 @import url(https://fonts.googleapis.com/css?family=Poiret+One|Nunito|Josefin+Sans:400,700|Source+Code+Pro|Comfortaa);
-@import url("http://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
+@import url("https://fonts.googleapis.com/css?family=Covered+By+Your+Grace");
 .calculator {
   text-decoration: none;
   text-shadow: none;
