--- a/public/partials/lesson2.html
+++ b/public/partials/lesson2.html
@@ -5,7 +5,7 @@
         by <span style='color: red;'><i class="fa fa-rocket"></i> grockr</span>
     </p>
     <hr>
-    <img style='width:100%;height: 20em;'class="img-responsive" src="http://cdn1.tnwcdn.com/wp-content/blogs.dir/1/files/2014/07/money.jpg" alt="">
+    <img style='width:100%;height: 20em;'class="img-responsive" src="https://cdn1.tnwcdn.com/wp-content/blogs.dir/1/files/2014/07/money.jpg" alt="">
     <hr>
     <h2 class="lead" style='font-family: Nunito; font-size:3em; text-align: center;'>How do companies make money?</h2>
     <h4>Products, Services, and Information</h4>
@@ -24,7 +24,7 @@
     <p>Information is a little bit trickier.  Sometimes companies make money by selling information about their customers, or the people that use their products.</p>
     <p>Google is a good example of both services and information. Google, as you probably know, has a popular website. They have millions of users who enjoy their services like searching, maps, and email. <em>Because</em> these services are so popular, they can sell information about the people who use their website to other companies. Some companies buy information about the <em>traffic</em> on a website so that they can sell more of their own products. These days, selling information makes you a lot of money. Google is a very successful company and their stock has done very well. </p>
     <hr>
-      <a style='font-size: 1.5em;' href='http://rcs.seerinteractive.com/money/'>Find out how some of biggest technology companies make <em>their</em> money.</a>
+      <a style='font-size: 1.5em;' href='https://rcs.seerinteractive.com/money/'>Find out how some of biggest technology companies make <em>their</em> money.</a>
     <hr>
     <div class="well">
         <h4>Leave a Comment:</h4>
