--- a/public/partials/chart2.html
+++ b/public/partials/chart2.html
@@ -1,5 +1,5 @@
-<script src="http://code.highcharts.com/stock/highstock.js"></script>
-<script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 
 <div class='lessonContainer animated flipInX'>
 <div id="CHART2container" style="height: 400px; max-width: 100%;min-width: 310px"></div>
