--- a/public/partials/lesson1.html
+++ b/public/partials/lesson1.html
@@ -23,7 +23,7 @@
       But... you own one share of that company, which means if they make money, you make money!  If their market value goes up,
       and the price of their stock goes up to $10, you just made $5!
     <hr>
-    <img style='width:100%;height: 20em;'class="img-responsive" src="https://www.ciginvest.com/wp-content/uploads/2011/12/wall-street-sign-homepage.jpg" alt="">
+    <img style='width:100%;height: 20em;'class="img-responsive" src="http://www.ciginvest.com/wp-content/uploads/2011/12/wall-street-sign-homepage.jpg" alt="">
     <hr>
     <h4>How do you buy stocks?</h4>
     <p>Before the internet and computers, the stock market was actually a place you would go to buy and sell stocks.
@@ -51,7 +51,7 @@
 
     <div class='row' style='text-align: center;'>
       <div class='col-md-4'>
-        <img height='60' width='60' src='https://careers.tdameritrade.com/img/social-profile.png'>
+        <img height='60' width='60' src='http://careers.tdameritrade.com/img/social-profile.png'>
         <p>TD Ameritrade</p>
       </div>
       <div class='col-md-4'>
