--- a/public/partials/library.html
+++ b/public/partials/library.html
@@ -3,7 +3,7 @@
 
   <div class='row'>
     <div class='circle' style='text-align:center;'>
-        <img src='https://debatecademy.com/icons/books2.png' height='100' width='100'>
+        <img src='http://debatecademy.com/icons/books2.png' height='100' width='100'>
     </div>
   </div>
   <div class="row">
