--- a/public/partials/intro.html
+++ b/public/partials/intro.html
@@ -1,4 +1,5 @@
-<div style='height: 60em; padding: 0; margin: 0;'>
+<!-- <div style='height: 60em; padding: 0; margin: 0;'> -->
+<div class='fill' style='min-height:100%; height: 100%; background-color: black;'>
   <div class='splash col-sm-12 col-xs-12' style='padding-bottom: 2em; float: left; text-align: center; height:100%; margin:0; padding:0;'>
 
     <div class='left pull-left col-sm-6 col-xs-6' style=" height: 55em;margin:0; padding:0;" >
